force-app/main/default/objects/Venue__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <inlineHelpText>e.g. 552 square metres</inlineHelpText>
    <label>Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>