force-app/main/default/objects/Venue__c/fields/Ceiling_Height__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Height__c</fullName>
    <inlineHelpText>e.g. 13m</inlineHelpText>
    <label>Ceiling Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>