force-app/main/default/objects/Venue__c/fields/CMIS_Building__c.field-meta.xml
<CustomField>
    <fullName>CMIS_Building__c</fullName>
    <description>CMIS Building Code.</description>
    <label>CMIS Building</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>BK</fullName>
            </value>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>EL</fullName>
            </value>
            <value>
                <fullName>Eye</fullName>
            </value>
            <value>
                <fullName>FTC</fullName>
            </value>
            <value>
                <fullName>GLD</fullName>
            </value>
            <value>
                <fullName>HT</fullName>
            </value>
            <value>
                <fullName>IMS</fullName>
            </value>
            <value>
                <fullName>KH</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>LN</fullName>
            </value>
            <value>
                <fullName>ML</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>PK</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>RB</fullName>
            </value>
            <value>
                <fullName>RFW</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>SB</fullName>
            </value>
            <value>
                <fullName>SG</fullName>
            </value>
            <value>
                <fullName>SM</fullName>
            </value>
            <value>
                <fullName>SPK</fullName>
            </value>
            <value>
                <fullName>STP</fullName>
            </value>
            <value>
                <fullName>UL</fullName>
            </value>
            <value>
                <fullName>ULC</fullName>
            </value>
            <value>
                <fullName>WB</fullName>
            </value>
            <value>
                <fullName>WBB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>