force-app/main/default/objects/Venue__c/fields/CMIS_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CMIS_Capacity__c</fullName>
    <label>CMIS Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>