force-app/main/default/objects/Venue__c/fields/CMIS_Class__c.field-meta.xml
<CustomField>
    <fullName>CMIS_Class__c</fullName>
    <description>CMIS Class available</description>
    <label>CMIS Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>