force-app/main/default/objects/Venue__c/fields/CMIS_Function__c.field-meta.xml
<CustomField>
    <fullName>CMIS_Function__c</fullName>
    <label>CMIS Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>