force-app/main/default/objects/Venue__c/fields/CMIS_Link_Code__c.field-meta.xml
<CustomField>
    <fullName>CMIS_Link_Code__c</fullName>
    <label>CMIS Link Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>