force-app/main/default/objects/Venue__c/fields/CMIS_Name__c.field-meta.xml
<CustomField>
    <fullName>CMIS_Name__c</fullName>
    <label>CMIS Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>