force-app/main/default/objects/Venue__c/fields/CMIS_Owner__c.field-meta.xml
<CustomField>
    <fullName>CMIS_Owner__c</fullName>
    <description>CMIS Owners available.</description>
    <label>CMIS Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMDE</fullName>
            </value>
            <value>
                <fullName>CTU</fullName>
            </value>
            <value>
                <fullName>ENG</fullName>
            </value>
            <value>
                <fullName>SENE</fullName>
            </value>
            <value>
                <fullName>LAW</fullName>
            </value>
            <value>
                <fullName>COMP</fullName>
            </value>
            <value>
                <fullName>SEGG</fullName>
            </value>
            <value>
                <fullName>SCES</fullName>
            </value>
            <value>
                <fullName>SMAP</fullName>
            </value>
            <value>
                <fullName>TEC</fullName>
            </value>
            <value>
                <fullName>CAM</fullName>
            </value>
            <value>
                <fullName>SCI</fullName>
            </value>
            <value>
                <fullName>CCI</fullName>
            </value>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>CTS</fullName>
            </value>
            <value>
                <fullName>ARCH</fullName>
            </value>
            <value>
                <fullName>SHCP</fullName>
            </value>
            <value>
                <fullName>PHBM</fullName>
            </value>
            <value>
                <fullName>ICJS</fullName>
            </value>
            <value>
                <fullName>BIOL</fullName>
            </value>
            <value>
                <fullName>PSYC</fullName>
            </value>
            <value>
                <fullName>SASHPL</fullName>
            </value>
            <value>
                <fullName>FMC</fullName>
            </value>
            <value>
                <fullName>SLAL</fullName>
            </value>
            <value>
                <fullName>PBS</fullName>
            </value>
            <value>
                <fullName>MARK-old</fullName>
            </value>
            <value>
                <fullName>ICP</fullName>
            </value>
            <value>
                <fullName>SHES</fullName>
            </value>
            <value>
                <fullName>HSS</fullName>
            </value>
            <value>
                <fullName>UPDA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>