force-app/main/default/objects/Venue__c/fields/CMIS_Room__c.field-meta.xml
<CustomField>
    <fullName>CMIS_Room__c</fullName>
    <label>CMIS Room</label>
    <length>255</length>
    <type>Text</type>
</CustomField>