force-app/main/default/objects/Venue__c/fields/CMIS_Type__c.field-meta.xml
<CustomField>
    <fullName>CMIS_Type__c</fullName>
    <description>CMIS Type  Available.</description>
    <label>CMIS Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>