force-app/main/default/objects/Venue__c/fields/CMIS_Zone__c.field-meta.xml
<CustomField>
    <fullName>CMIS_Zone__c</fullName>
    <description>CMIS Zone available for Venue.</description>
    <label>CMIS Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZONE 01</fullName>
            </value>
            <value>
                <fullName>ZONE 09</fullName>
            </value>
            <value>
                <fullName>ZONE 02</fullName>
            </value>
            <value>
                <fullName>ZONE 10</fullName>
            </value>
            <value>
                <fullName>ZONE 07</fullName>
            </value>
            <value>
                <fullName>ZONE 08</fullName>
            </value>
            <value>
                <fullName>ZONE 05</fullName>
            </value>
            <value>
                <fullName>ZONE 03</fullName>
            </value>
            <value>
                <fullName>ZONE 04</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>