force-app/main/default/objects/Venue__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <label>Display Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anglesea Building</fullName>
            </value>
            <value>
                <fullName>Buckingham Building</fullName>
            </value>
            <value>
                <fullName>Burnaby Building</fullName>
            </value>
            <value>
                <fullName>Dennis Sciama</fullName>
            </value>
            <value>
                <fullName>Eldon Building</fullName>
            </value>
            <value>
                <fullName>Eye Clinic</fullName>
            </value>
            <value>
                <fullName>Future Technology Centre</fullName>
            </value>
            <value>
                <fullName>Institute of Marine Science</fullName>
            </value>
            <value>
                <fullName>King Henry Building</fullName>
            </value>
            <value>
                <fullName>Lion Gate Building</fullName>
            </value>
            <value>
                <fullName>Mildam Building</fullName>
            </value>
            <value>
                <fullName>Park Building</fullName>
            </value>
            <value>
                <fullName>Portland Building</fullName>
            </value>
            <value>
                <fullName>Queen Alexandra Hospital</fullName>
            </value>
            <value>
                <fullName>Richmond Building</fullName>
            </value>
            <value>
                <fullName>Rosalind Franklin West</fullName>
            </value>
            <value>
                <fullName>Spinnaker Building</fullName>
            </value>
            <value>
                <fullName>Spinnaker Sports Centre</fullName>
            </value>
            <value>
                <fullName>St Andrew&apos;s Court</fullName>
            </value>
            <value>
                <fullName>St George&apos;s Building</fullName>
            </value>
            <value>
                <fullName>St Micheal&apos;s Building</fullName>
            </value>
            <value>
                <fullName>St Pauls Gym</fullName>
            </value>
            <value>
                <fullName>University Learning Centre</fullName>
            </value>
            <value>
                <fullName>University Library</fullName>
            </value>
            <value>
                <fullName>White Swan Building</fullName>
            </value>
            <value>
                <fullName>William Beaty Building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>