force-app/main/default/objects/Venue__c/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <label>Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blackout Blinds</fullName>
            </value>
            <value>
                <fullName>Breakout Room</fullName>
            </value>
            <value>
                <fullName>Changing Room</fullName>
            </value>
            <value>
                <fullName>Conference Option</fullName>
            </value>
            <value>
                <fullName>Food Option</fullName>
            </value>
            <value>
                <fullName>Green Room</fullName>
            </value>
            <value>
                <fullName>Induction Loop</fullName>
            </value>
            <value>
                <fullName>Lobby</fullName>
            </value>
            <value>
                <fullName>Meeting option</fullName>
            </value>
            <value>
                <fullName>Outdoor Area</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Registration Area</fullName>
            </value>
            <value>
                <fullName>Stage</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
            <value>
                <fullName>Toilets</fullName>
            </value>
            <value>
                <fullName>Wifi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>