force-app/main/default/objects/Venue__c/fields/Location_Information__c.field-meta.xml
<CustomField>
    <fullName>Location_Information__c</fullName>
    <label>Location Information</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>