force-app/main/default/objects/Venue__c/fields/Map_to_Venue__c.field-meta.xml
<CustomField>
    <fullName>Map_to_Venue__c</fullName>
    <formula>HYPERLINK(&quot;http://maps.google.com/maps?q=&quot;+  Street_Address_1__c  + &quot;, &quot; +  City__c  + &quot;, &quot; +  State__c  + &quot; &quot; +   Postal_Code_Zip__c  + &quot; &quot; +   Country__c  , &quot;Google Map&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map to Venue</label>
    <type>Text</type>
</CustomField>