force-app/main/default/objects/Venue__c/fields/Maximum_Venue_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Venue_Capacity__c</fullName>
    <defaultValue>1000</defaultValue>
    <label>Maximum Venue Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>