force-app/main/default/objects/Venue__c/fields/Parent_Venue__c.field-meta.xml
<CustomField>
    <fullName>Parent_Venue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Represents the hierarchy of venues e.g. Launch ED Campus &gt; Anglesea Building &gt; Room 1.1</inlineHelpText>
    <label>Parent Venue</label>
    <referenceTo>Venue__c</referenceTo>
    <relationshipLabel>Venues</relationshipLabel>
    <relationshipName>Venues</relationshipName>
    <type>Lookup</type>
</CustomField>