force-app/main/default/objects/Venue__c/fields/Postal_Code_Zip__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_Zip__c</fullName>
    <label>Postal Code/Zip</label>
    <length>80</length>
    <type>Text</type>
</CustomField>