force-app/main/default/objects/Venue__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Contact</description>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Venues</relationshipLabel>
    <relationshipName>Venues</relationshipName>
    <type>Lookup</type>
</CustomField>