force-app/main/default/objects/Venue__c/fields/Primary_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Title__c</fullName>
    <formula>Primary_Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Title</label>
    <type>Text</type>
</CustomField>