force-app/main/default/objects/Venue__c/fields/Setup_Options__c.field-meta.xml
<CustomField>
    <fullName>Setup_Options__c</fullName>
    <label>Setup Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boardroom</fullName>
            </value>
            <value>
                <fullName>Buffet</fullName>
            </value>
            <value>
                <fullName>Celebration / Party</fullName>
            </value>
            <value>
                <fullName>Classroom</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Exhibition</fullName>
            </value>
            <value>
                <fullName>Horseshoe</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
            <value>
                <fullName>Theater</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>