force-app/main/default/objects/Venue__c/fields/Street_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_1__c</fullName>
    <label>Street Address #1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>