force-app/main/default/objects/Venue__c/fields/Venue_Image__c.field-meta.xml
<CustomField>
    <fullName>Venue_Image__c</fullName>
    <label>Venue Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>