force-app/main/default/objects/Venue__c/fields/Venue_Reference__c.field-meta.xml
<CustomField>
    <fullName>Venue_Reference__c</fullName>
    <label>Venue Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>