force-app/main/default/objects/Venue__c/fields/Venue_Type__c.field-meta.xml
<CustomField>
    <fullName>Venue_Type__c</fullName>
    <label>Venue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>City Buildings</fullName>
            </value>
            <value>
                <fullName>Convention Center</fullName>
            </value>
            <value>
                <fullName>Halls of Residence</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Museum</fullName>
            </value>
            <value>
                <fullName>Outdoor Space</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>University Building</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>