force-app/main/default/objects/Venue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Venue_Type__c</columns>
    <columns>Maximum_Venue_Capacity__c</columns>
    <columns>Website__c</columns>
    <columns>Telephone_Number__c</columns>
    <columns>Map_to_Venue__c</columns>
    <filterScope>Everything</filterScope>
    <label>1. All Venues</label>
</ListView>