force-app/main/default/objects/Venue__c/listViews/X2_University_Buildings.listView-meta.xml
<ListView>
    <fullName>X2_University_Buildings</fullName>
    <columns>NAME</columns>
    <columns>Venue_Type__c</columns>
    <columns>Maximum_Venue_Capacity__c</columns>
    <columns>Website__c</columns>
    <columns>Telephone_Number__c</columns>
    <columns>Map_to_Venue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Venue_Type__c</field>
        <operation>equals</operation>
        <value>University Building</value>
    </filters>
    <label>2. University Buildings</label>
</ListView>